# llm-2025

./: .gitignore  main.py  memo.txt  pyproject.toml  vastai-setup_uv-2.sh  vastai-setup_uv.sh  vllm_version.py
grpo_trainer_lora_model/: adapter_config.json
scripts/: eval.py  eval20251208.py  format_openmathinstruct2.py  grpo-unsloth-2.py  grpo-unsloth-3.py  grpo-unsloth.py  gsm8k_result_confirm.sh  hf_uploader.py  hi-quarity-cot.py  jsonl2parquet_chunked.py  math_verify.py  mymath_verify.py  sft-unsloth.py  sft-unsloth20251213.py
scripts/unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothBCOTrainer.py  UnslothDDPOTrainer.py  UnslothGKDTrainer.py  UnslothIterativeSFTTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py
tests/: test_sample.py
unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDDPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothIterativeSFTTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py
wandb/: latest-run
wandb/run-20251204_105610-8zl2lz50/: run-8zl2lz50.wandb
wandb/run-20251204_105610-8zl2lz50/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251204_112021-mlj2t883/: run-mlj2t883.wandb
wandb/run-20251204_112021-mlj2t883/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20251204_112610-6n17qikl/: run-6n17qikl.wandb
wandb/run-20251204_112610-6n17qikl/files/: config.yaml  wandb-metadata.json  wandb-summary.json
