[project]
name = "llmcomp"
version = "0.1.0"
description = "Matsuo Lab LLM Competition Pipeline"
requires-python = ">=3.10"

dependencies = [
    "transformers",
    "accelerate",
    "datasets",
    "trl",
    "peft",
    "bitsandbytes",
    "sentencepiece",
    "evaluate",
    "wandb",
    "tiktoken",
    "scikit-learn",
    "numpy",
    "einops",
    "unsloth>=2025.11.1",
    "setuptools>=80.9.0",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "ipykernel",
]
