[project]
name = "llmcomp"
version = "0.1.0"
description = "Matsuo Lab LLM Competition Pipeline"
requires-python = ">=3.10"

# 共通依存（SFT / GRPO / Eval で共通）
dependencies = [
    "transformers",
    "accelerate",
    "datasets",
    "peft",
    "bitsandbytes",
    "sentencepiece",
    "evaluate",
    "wandb",
    "tiktoken",
    "scikit-learn",
    "numpy",
    "einops",
    "setuptools",
    "sympy",
    "unsloth",
]

# グループ依存（uv の新仕様）
[dependency-groups]
# SFT: 今後 SFT専用をここに追加
sft = [
]

# GRPO / RL / 推論
grpo = [
    "transformers==4.56.2",
    "trl==0.22.2",
    "vllm==0.10.2",
]

# 評価系（math-verify 等）
eval = [
]

# 開発用
dev = [
    "pytest",
    "ipykernel",
]
